--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://gabriel-5.github.io/",
+  "homepage": "http://gabriel-5.github.io/p6-social-site/",
   "name": "p6-social-site",
   "version": "0.1.0",
   "private": true,
